crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@257.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE INDEX prt2_adv_b_idx ON prt2_adv (b);
---
IndexStmt@0..44
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Index@7..12 "INDEX"
  Whitespace@12..13 " "
  Ident@13..27 "prt2_adv_b_idx"
  Whitespace@27..28 " "
  On@28..30 "ON"
  Whitespace@30..31 " "
  RangeVar@31..39
    Ident@31..39 "prt2_adv"
  Whitespace@39..40 " "
  Ascii40@40..41 "("
  IndexElem@41..42
    Ident@41..42 "b"
  Ascii41@42..43 ")"
  Ascii59@43..44 ";"

