crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@259.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO prt2_adv_p2 SELECT i % 25, i, to_char(i, 'FM0000') FROM generate_series(200, 299) i;"
---
InsertStmt@0..96
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..23
    Ident@12..23 "prt2_adv_p2"
  Whitespace@23..24 " "
  SelectStmt@24..95
    Select@24..30 "SELECT"
    Whitespace@30..31 " "
    ResTarget@31..37
      AExpr@31..37
        ColumnRef@31..32
          Ident@31..32 "i"
        Whitespace@32..33 " "
        Ascii37@33..34 "%"
        Whitespace@34..35 " "
        AConst@35..37
          Iconst@35..37 "25"
    Ascii44@37..38 ","
    Whitespace@38..39 " "
    ResTarget@39..40
      ColumnRef@39..40
        Ident@39..40 "i"
    Ascii44@40..41 ","
    Whitespace@41..42 " "
    ResTarget@42..61
      FuncCall@42..61
        Ident@42..49 "to_char"
        Ascii40@49..50 "("
        ColumnRef@50..51
          Ident@50..51 "i"
        Ascii44@51..52 ","
        Whitespace@52..53 " "
        AConst@53..61
          Sconst@53..61 "'FM0000'"
    Ascii41@61..62 ")"
    Whitespace@62..63 " "
    From@63..67 "FROM"
    Whitespace@67..68 " "
    RangeFunction@68..95
      List@68..92
        FuncCall@68..92
          Ident@68..83 "generate_series"
          Ascii40@83..84 "("
          AConst@84..87
            Iconst@84..87 "200"
          Ascii44@87..88 ","
          Whitespace@88..89 " "
          AConst@89..92
            Iconst@89..92 "299"
      Ascii41@92..93 ")"
      Whitespace@93..94 " "
      Alias@94..95
        Ident@94..95 "i"
  Ascii59@95..96 ";"

