crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@27.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT t1.a, t1.c, t2.b, t2.c FROM (SELECT 50 phv, * FROM prt1 WHERE prt1.b = 0) t1 FULL JOIN (SELECT 75 phv, * FROM prt2 WHERE prt2.a = 0) t2 ON (t1.a = t2.b) WHERE t1.phv = t1.a OR t2.phv = t2.b ORDER BY t1.a, t2.b;"
---
SelectStmt@0..217
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..11
    ColumnRef@7..11
      Ident@7..9 "t1"
      Ascii46@9..10 "."
      Ident@10..11 "a"
  Ascii44@11..12 ","
  Whitespace@12..13 " "
  ResTarget@13..17
    ColumnRef@13..17
      Ident@13..15 "t1"
      Ascii46@15..16 "."
      Ident@16..17 "c"
  Ascii44@17..18 ","
  Whitespace@18..19 " "
  ResTarget@19..23
    ColumnRef@19..23
      Ident@19..21 "t2"
      Ascii46@21..22 "."
      Ident@22..23 "b"
  Ascii44@23..24 ","
  Whitespace@24..25 " "
  ResTarget@25..29
    ColumnRef@25..29
      Ident@25..27 "t2"
      Ascii46@27..28 "."
      Ident@28..29 "c"
  Whitespace@29..30 " "
  From@30..34 "FROM"
  Whitespace@34..35 " "
  Ascii40@35..36 "("
  JoinExpr@36..158
    RangeSubselect@36..83
      SelectStmt@36..79
        Select@36..42 "SELECT"
        Whitespace@42..43 " "
        ResTarget@43..49
          AConst@43..45
            Iconst@43..45 "50"
          Whitespace@45..46 " "
          Ident@46..49 "phv"
        Ascii44@49..50 ","
        Whitespace@50..51 " "
        ResTarget@51..52
          ColumnRef@51..52
            AStar@51..52
              Ascii42@51..52 "*"
        Whitespace@52..53 " "
        From@53..57 "FROM"
        Whitespace@57..58 " "
        RangeVar@58..62
          Ident@58..62 "prt1"
        Whitespace@62..63 " "
        Where@63..68 "WHERE"
        Whitespace@68..69 " "
        AExpr@69..79
          ColumnRef@69..75
            Ident@69..73 "prt1"
            Ascii46@73..74 "."
            Ident@74..75 "b"
          Whitespace@75..76 " "
          Ascii61@76..77 "="
          Whitespace@77..78 " "
          AConst@78..79
            Iconst@78..79 "0"
      Ascii41@79..80 ")"
      Whitespace@80..81 " "
      Alias@81..83
        Ident@81..83 "t1"
    Whitespace@83..84 " "
    Full@84..88 "FULL"
    Whitespace@88..89 " "
    Join@89..93 "JOIN"
    Whitespace@93..94 " "
    Ascii40@94..95 "("
    RangeSubselect@95..142
      SelectStmt@95..138
        Select@95..101 "SELECT"
        Whitespace@101..102 " "
        ResTarget@102..108
          AConst@102..104
            Iconst@102..104 "75"
          Whitespace@104..105 " "
          Ident@105..108 "phv"
        Ascii44@108..109 ","
        Whitespace@109..110 " "
        ResTarget@110..111
          ColumnRef@110..111
            AStar@110..111
              Ascii42@110..111 "*"
        Whitespace@111..112 " "
        From@112..116 "FROM"
        Whitespace@116..117 " "
        RangeVar@117..121
          Ident@117..121 "prt2"
        Whitespace@121..122 " "
        Where@122..127 "WHERE"
        Whitespace@127..128 " "
        AExpr@128..138
          ColumnRef@128..134
            Ident@128..132 "prt2"
            Ascii46@132..133 "."
            Ident@133..134 "a"
          Whitespace@134..135 " "
          Ascii61@135..136 "="
          Whitespace@136..137 " "
          AConst@137..138
            Iconst@137..138 "0"
      Ascii41@138..139 ")"
      Whitespace@139..140 " "
      Alias@140..142
        Ident@140..142 "t2"
    Whitespace@142..143 " "
    On@143..145 "ON"
    Whitespace@145..146 " "
    Ascii40@146..147 "("
    AExpr@147..158
      ColumnRef@147..151
        Ident@147..149 "t1"
        Ascii46@149..150 "."
        Ident@150..151 "a"
      Whitespace@151..152 " "
      Ascii61@152..153 "="
      Whitespace@153..154 " "
      ColumnRef@154..158
        Ident@154..156 "t2"
        Ascii46@156..157 "."
        Ident@157..158 "b"
  Ascii41@158..159 ")"
  Whitespace@159..160 " "
  Where@160..165 "WHERE"
  Whitespace@165..166 " "
  BoolExpr@166..196
    AExpr@166..179
      ColumnRef@166..172
        Ident@166..168 "t1"
        Ascii46@168..169 "."
        Ident@169..172 "phv"
      Whitespace@172..173 " "
      Ascii61@173..174 "="
      Whitespace@174..175 " "
      ColumnRef@175..179
        Ident@175..177 "t1"
        Ascii46@177..178 "."
        Ident@178..179 "a"
    Whitespace@179..180 " "
    Or@180..182 "OR"
    Whitespace@182..183 " "
    AExpr@183..196
      ColumnRef@183..189
        Ident@183..185 "t2"
        Ascii46@185..186 "."
        Ident@186..189 "phv"
      Whitespace@189..190 " "
      Ascii61@190..191 "="
      Whitespace@191..192 " "
      ColumnRef@192..196
        Ident@192..194 "t2"
        Ascii46@194..195 "."
        Ident@195..196 "b"
  Whitespace@196..197 " "
  SortBy@197..210
    Order@197..202 "ORDER"
    Whitespace@202..203 " "
    By@203..205 "BY"
    Whitespace@205..206 " "
    ColumnRef@206..210
      Ident@206..208 "t1"
      Ascii46@208..209 "."
      Ident@209..210 "a"
  Ascii44@210..211 ","
  Whitespace@211..212 " "
  SortBy@212..216
    ColumnRef@212..216
      Ident@212..214 "t2"
      Ascii46@214..215 "."
      Ident@215..216 "b"
  Ascii59@216..217 ";"

