crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@273.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO prt2_adv SELECT i % 25, i, to_char(i, 'FM0000') FROM generate_series(500, 599) i;"
---
InsertStmt@0..93
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "prt2_adv"
  Whitespace@20..21 " "
  SelectStmt@21..92
    Select@21..27 "SELECT"
    Whitespace@27..28 " "
    ResTarget@28..34
      AExpr@28..34
        ColumnRef@28..29
          Ident@28..29 "i"
        Whitespace@29..30 " "
        Ascii37@30..31 "%"
        Whitespace@31..32 " "
        AConst@32..34
          Iconst@32..34 "25"
    Ascii44@34..35 ","
    Whitespace@35..36 " "
    ResTarget@36..37
      ColumnRef@36..37
        Ident@36..37 "i"
    Ascii44@37..38 ","
    Whitespace@38..39 " "
    ResTarget@39..58
      FuncCall@39..58
        Ident@39..46 "to_char"
        Ascii40@46..47 "("
        ColumnRef@47..48
          Ident@47..48 "i"
        Ascii44@48..49 ","
        Whitespace@49..50 " "
        AConst@50..58
          Sconst@50..58 "'FM0000'"
    Ascii41@58..59 ")"
    Whitespace@59..60 " "
    From@60..64 "FROM"
    Whitespace@64..65 " "
    RangeFunction@65..92
      List@65..89
        FuncCall@65..89
          Ident@65..80 "generate_series"
          Ascii40@80..81 "("
          AConst@81..84
            Iconst@81..84 "500"
          Ascii44@84..85 ","
          Whitespace@85..86 " "
          AConst@86..89
            Iconst@86..89 "599"
      Ascii41@89..90 ")"
      Whitespace@90..91 " "
      Alias@91..92
        Ident@91..92 "i"
  Ascii59@92..93 ";"

