crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@278.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT t1.* FROM prt1_adv t1 WHERE EXISTS (SELECT 1 FROM prt2_adv t2 WHERE t1.a = t2.b) AND t1.b = 0 ORDER BY t1.a;
---
SelectStmt@0..115
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..11
    ColumnRef@7..11
      Ident@7..9 "t1"
      Ascii46@9..10 "."
      AStar@10..11
        Ascii42@10..11 "*"
  Whitespace@11..12 " "
  From@12..16 "FROM"
  Whitespace@16..17 " "
  RangeVar@17..28
    Ident@17..25 "prt1_adv"
    Whitespace@25..26 " "
    Alias@26..28
      Ident@26..28 "t1"
  Whitespace@28..29 " "
  Where@29..34 "WHERE"
  Whitespace@34..35 " "
  BoolExpr@35..100
    SubLink@35..86
      SelectStmt@35..86
        Exists@35..41 "EXISTS"
        Whitespace@41..42 " "
        Ascii40@42..43 "("
        Select@43..49 "SELECT"
        Whitespace@49..50 " "
        ResTarget@50..51
          AConst@50..51
            Iconst@50..51 "1"
        Whitespace@51..52 " "
        From@52..56 "FROM"
        Whitespace@56..57 " "
        RangeVar@57..68
          Ident@57..65 "prt2_adv"
          Whitespace@65..66 " "
          Alias@66..68
            Ident@66..68 "t2"
        Whitespace@68..69 " "
        Where@69..74 "WHERE"
        Whitespace@74..75 " "
        AExpr@75..86
          ColumnRef@75..79
            Ident@75..77 "t1"
            Ascii46@77..78 "."
            Ident@78..79 "a"
          Whitespace@79..80 " "
          Ascii61@80..81 "="
          Whitespace@81..82 " "
          ColumnRef@82..86
            Ident@82..84 "t2"
            Ascii46@84..85 "."
            Ident@85..86 "b"
    Ascii41@86..87 ")"
    Whitespace@87..88 " "
    And@88..91 "AND"
    Whitespace@91..92 " "
    AExpr@92..100
      ColumnRef@92..96
        Ident@92..94 "t1"
        Ascii46@94..95 "."
        Ident@95..96 "b"
      Whitespace@96..97 " "
      Ascii61@97..98 "="
      Whitespace@98..99 " "
      AConst@99..100
        Iconst@99..100 "0"
  Whitespace@100..101 " "
  SortBy@101..114
    Order@101..106 "ORDER"
    Whitespace@106..107 " "
    By@107..109 "BY"
    Whitespace@109..110 " "
    ColumnRef@110..114
      Ident@110..112 "t1"
      Ascii46@112..113 "."
      Ident@113..114 "a"
  Ascii59@114..115 ";"

