crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@280.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT t1.a, t1.c, t2.b, t2.c FROM prt1_adv t1 LEFT JOIN prt2_adv t2 ON (t1.a = t2.b) WHERE t1.b = 0 ORDER BY t1.a, t2.b;"
---
SelectStmt@0..121
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..11
    ColumnRef@7..11
      Ident@7..9 "t1"
      Ascii46@9..10 "."
      Ident@10..11 "a"
  Ascii44@11..12 ","
  Whitespace@12..13 " "
  ResTarget@13..17
    ColumnRef@13..17
      Ident@13..15 "t1"
      Ascii46@15..16 "."
      Ident@16..17 "c"
  Ascii44@17..18 ","
  Whitespace@18..19 " "
  ResTarget@19..23
    ColumnRef@19..23
      Ident@19..21 "t2"
      Ascii46@21..22 "."
      Ident@22..23 "b"
  Ascii44@23..24 ","
  Whitespace@24..25 " "
  ResTarget@25..29
    ColumnRef@25..29
      Ident@25..27 "t2"
      Ascii46@27..28 "."
      Ident@28..29 "c"
  Whitespace@29..30 " "
  From@30..34 "FROM"
  Whitespace@34..35 " "
  JoinExpr@35..84
    RangeVar@35..46
      Ident@35..43 "prt1_adv"
      Whitespace@43..44 " "
      Alias@44..46
        Ident@44..46 "t1"
    Whitespace@46..47 " "
    Left@47..51 "LEFT"
    Whitespace@51..52 " "
    Join@52..56 "JOIN"
    Whitespace@56..57 " "
    RangeVar@57..68
      Ident@57..65 "prt2_adv"
      Whitespace@65..66 " "
      Alias@66..68
        Ident@66..68 "t2"
    Whitespace@68..69 " "
    On@69..71 "ON"
    Whitespace@71..72 " "
    Ascii40@72..73 "("
    AExpr@73..84
      ColumnRef@73..77
        Ident@73..75 "t1"
        Ascii46@75..76 "."
        Ident@76..77 "a"
      Whitespace@77..78 " "
      Ascii61@78..79 "="
      Whitespace@79..80 " "
      ColumnRef@80..84
        Ident@80..82 "t2"
        Ascii46@82..83 "."
        Ident@83..84 "b"
  Ascii41@84..85 ")"
  Whitespace@85..86 " "
  Where@86..91 "WHERE"
  Whitespace@91..92 " "
  AExpr@92..100
    ColumnRef@92..96
      Ident@92..94 "t1"
      Ascii46@94..95 "."
      Ident@95..96 "b"
    Whitespace@96..97 " "
    Ascii61@97..98 "="
    Whitespace@98..99 " "
    AConst@99..100
      Iconst@99..100 "0"
  Whitespace@100..101 " "
  SortBy@101..114
    Order@101..106 "ORDER"
    Whitespace@106..107 " "
    By@107..109 "BY"
    Whitespace@109..110 " "
    ColumnRef@110..114
      Ident@110..112 "t1"
      Ascii46@112..113 "."
      Ident@113..114 "a"
  Ascii44@114..115 ","
  Whitespace@115..116 " "
  SortBy@116..120
    ColumnRef@116..120
      Ident@116..118 "t2"
      Ascii46@118..119 "."
      Ident@119..120 "b"
  Ascii59@120..121 ";"

