crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@291.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE TABLE prt2_adv_p3_2 PARTITION OF prt2_adv FOR VALUES FROM (375) TO (500);
---
CreateStmt@0..80
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..26
    Ident@13..26 "prt2_adv_p3_2"
  Whitespace@26..27 " "
  Partition@27..36 "PARTITION"
  Whitespace@36..37 " "
  Of@37..39 "OF"
  Whitespace@39..40 " "
  RangeVar@40..48
    Ident@40..48 "prt2_adv"
  Whitespace@48..49 " "
  For@49..52 "FOR"
  Whitespace@52..53 " "
  Values@53..59 "VALUES"
  Whitespace@59..60 " "
  PartitionBoundSpec@60..78
    From@60..64 "FROM"
    Whitespace@64..65 " "
    Ascii40@65..66 "("
    AConst@66..69
      Iconst@66..69 "375"
    Ascii41@69..70 ")"
    Whitespace@70..71 " "
    To@71..73 "TO"
    Whitespace@73..74 " "
    Ascii40@74..75 "("
    AConst@75..78
      Iconst@75..78 "500"
  Ascii41@78..79 ")"
  Ascii59@79..80 ";"

